--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@ header {
 header h1 {
   display: inline-block;
   padding: 6px 12px;
-  border-radius: 36px;
-  border: 4px solid white;
+  border-radius: 16px;
+  font-size: 30px;
+  border: 2px solid white;
   color: #9ed7db;
 }
 
@@ -46,45 +47,37 @@ body {
 .banner .News {
   position: absolute;
   padding: 3px;
-  top: 40%;
+  top: 30%;
   left: 0;
   font-size: 30px;
-  color: #ffffff;
-  background: #ffffff;
 }
 .banner .facts {
   position: absolute;
   padding: 3px;
-  top: 40%;
+  top: 30%;
   left: 0;
   font-size: 30px;
-  color: #ffffff;
-  background: #ffffff;
 }
 .banner .aboutus {
   position: absolute;
   padding: 3px;
-  top: 40%;
+  top: 30%;
   left: 0;
   font-size: 30px;
-  color: #ffffff;
-  background: #ffffff;
 }
 .banner .home {
   position: absolute;
   padding: 3px;
-  top: 40%;
+  top: 30%;
   left: 0;
   font-size: 30px;
-  color: #ffffff;
-  background: #ffffff;
 }
 nav {
   position: sticky;
   padding: 15px;
-  top: 60px;
+  top: 40px;
   z-index: 1;
-  background: #99c7ca;
+  background: #60989c;
 }
 
 nav ul {
@@ -101,7 +94,10 @@ nav li {
 }
 
 nav li a {
+  color: #87e7eb;
+  text-decoration: none;
 }
 
 nav li a:hover {
+  text-decoration: underline;
 }
